2006-12-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30200
	* trans-io.c (build_dt): Move post block for format_expr to end.

2006-12-13  Steven G. Kargl  <kargl@gcc.gnu.org>

	Revert Paul Thomas' commit from 2006-12-09

2006-12-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29821
	* resolve.c (resolve_operator): Only return result of
	gfc_simplify_expr if expression is constant.

	PR fortran/29912
	* trans-expr.c (gfc_trans_arrayfunc_assign): Return NULL if the
	lhs and rhs character lengths are not constant and equal for
	character array valued functions.

	PR fortran/29916
	* resolve.c (resolve_symbol): Allow host-associated variables
	in the specification expression of an array-valued function.
	* expr.c (check_restricted): Accept host-associated dummy
	array indices.

	PR fortran/30003
	* trans-array.c (gfc_trans_create_temp_array): Set the section
	ends to zero.
	(gfc_conv_section_startstride): Declare an expression for end,
	set it from a the array reference and evaluate it for the info
	structure. Zero the ends in the ss structure and set end, used
	in the bounds check, from the info structure.
	trans.h: Add and end array to the gfc_ss_info structure.

	PR fortran/29820
	* trans-array.c (gfc_get_derived_type): Once done, spread the
	backend_decl to all identical derived types in all sibling
	namespaces.

2006-11-26  Andrew Pinski  <pinskia@gmail.com>

	PR fortran/29982
	* trans-expr.c (gfc_conv_expr_reference): Strip off NOP_EXPRs.

2006-11-24  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29391
	PR fortran/29489
	* simplify.c (simplify_bound): Fix the simplification of
	LBOUND/UBOUND intrinsics.
	* trans-intrinsic.c (simplify_bound): Fix the logic, and
	remove an erroneous assert.

2006-11-24  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29391
	* trans-intrinsic.c (gfc_conv_intrinsic_bound): Generate correct
	code for LBOUND and UBOUND intrinsics.
