@@ -1,3 +1,8 @@
+2007-01-24  Roger Sayle  <roger@eyesopen.com>
+
+	* trans-intrinsic.c (gfc_conv_intrinsic_sign): Call gfc_evaluate_now
+	to prevent re-evaluation of first operand.
+
 2006-12-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/30200
